--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,8 @@
 
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "screen-256color"
-if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
+set -g default-terminal "tmux-256color"
+# if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
 
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
@@ -30,7 +30,7 @@ bind e new-window -n "~/.config/tmux/.tmux.conf.local"
 "EDITOR=\${EDITOR//nvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.config/tmux/.tmux.conf.local && tmux source ~/.config/tmux/.tmux.conf && tmux display \"tmux.conf sourced\""
 
 # reload configuration
-bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
+bind r source-file ~/.config/tmux/.tmux.conf \; display 'tmux.conf sourced'
 
 
 # -- display -------------------------------------------------------------------
@@ -43,7 +43,7 @@ set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
 
-set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-panes-time 2000 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-interval 10     # redraw status line every 10 seconds
