--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ setw -q -g utf8 on
 set -g history-limit 5000                 # boost history
 
 # edit configuration
-bind e new-window -n "~/.config/tmux/.tmux.conf.local"
+bind e new-window -n "~/.config/tmux/tmux.conf.local"
 "EDITOR=\${EDITOR//nvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.config/tmux/.tmux.conf.local && tmux source ~/.config/tmux/.tmux.conf && tmux display \"tmux.conf sourced\""
 
 # reload configuration
